--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "plato",
   "version": "0.0.1",
   "description": "note-taking app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "mocha Test.js"
+    "start": "npm run lint && nodemon server/server.js",
+    "test": "npm run lint && mocha Test.js -R nyan",
+    "lint": "eslint --ext .js --ext .jsx Test.js server db",
+    "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -29,10 +32,20 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "nodemon": "^1.10.2"
+    "mongoose": "^4.6.1",
+    "nodemon": "^1.10.2",
+    "react": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
     "chai": "^3.5.0",
+    "eslint": "^3.6.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "mocha": "^3.0.2",
     "supertest": "^2.0.0"
   }
