--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "npm run lint && nodemon server/server.js",
-    "test": "npm run lint && mocha Test.js -R nyan",
-    "lint": "eslint --ext .js --ext .jsx Test.js server db public",
+    "test": "npm run lint && mocha test -R nyan",
+    "lint": "eslint --ext .js --ext .jsx test server db public",
     "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js"
   },
   "repository": {
