--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - '0.10'
 
-script: mocha Test.js
+script: mocha test
 
 notifications:
  slack: hr46:9wx63tFQsFOqK9t4TaCE4FUM
