--- a/package.json
+++ b/package.json
@@ -35,11 +35,17 @@
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
     "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "eslint": "^3.6.0",
     "eslint-config-airbnb": "^11.1.0",
@@ -47,6 +53,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
     "mocha": "^3.0.2",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "webpack": "^1.13.2"
   }
 }
