--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run lint && nodemon server/server.js",
     "test": "mocha test -R nyan",
-    "lint": "eslint --ext .js --ext .jsx test server db public",
+    "lint": "eslint --ext .js --ext .jsx test server db public --ignore-path client/public/bundle.js",
     "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js"
   },
   "repository": {
