--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run lint && nodemon server/server.js",
     "test": "mocha test -R nyan",
+    "enzyme": "mocha --require ./test/setup.js --compilers js:babel-register",
     "lint": "eslint --ext .js --ext .jsx test server db public --ignore-path client/public/bundle.js",
     "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js"
   },
@@ -47,12 +48,15 @@
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
     "eslint": "^3.6.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
+    "jsdom": "^9.5.0",
     "mocha": "^3.0.2",
+    "react-addons-test-utils": "^15.3.2",
     "supertest": "^2.0.0",
     "webpack": "^1.13.2"
   }
