--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: node_js
 node_js:
   - '4.5.0'
 
-script: 
-  - mongod  
-  - mocha test
+services:
+  - mongodb
+
+script: mocha test
 
 notifications:
  email: false
