--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ node_js:
 services:
   - mongodb
 
+before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+
 script: mocha test
 
 notifications:
