--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "superagent": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
