--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run lint && nodemon server/server.js",
     "test": "mocha --require ./test/setup.js --compilers jsx:babel-register -R list",
     "lint": "eslint --ext .js --ext .jsx test server db public --ignore-path client/public/bundle.js",
-    "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js"
+    "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js",
+    "build": "npm run lint && node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
   "homepage": "https://github.com/enchanted-spotlight/Plato#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
