--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "mocha --require ./test/setup.js --compilers jsx:babel-register -R list",
     "lint": "eslint --ext .js --ext .jsx test server db public --ignore-path client/public/bundle.js",
     "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js",
-    "build": "npm run lint && node_modules/.bin/webpack"
+    "build": "npm run lint && node_modules/.bin/webpack",
+    "dev": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
+    "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
