--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["es2015", "react", "stage-0"]
+  "presets": [
+    {
+      plugins: [
+        "transform-object-rest-spread"
+      ]
+    },
+    "es2015",
+    "react",
+    "stage-0"
+  ]
 }
