--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/enchanted-spotlight/Plato#readme",
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
