--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 
 before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 
-script: npm test
+script: mocha test
 
 notifications:
  email: false
