--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 
-script: mocha test/serverSpec.js
+script: mocha --require ./test/setup.js --compilers jsx:babel-register -R list
 
 notifications:
  email: false
