--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^6.3.0",
     "jsdom": "^9.5.0",
     "mocha": "^3.0.2",
+    "mocha-jsdom": "^1.1.0",
     "react-addons-test-utils": "^15.3.2",
     "supertest": "^2.0.0",
     "webpack": "^1.13.2"
