--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,12 @@ node_js:
 services:
   - mongodb
 
-before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+before_install:
+  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+  - "exportDISPLAY=:99.0"
+  - "sh-e/etc/init.d/xvfbstart"
 
-addons:
-  sauce_connect:
-    username: "jsdom"
-    access_key: "7d402b1d-0388-467c-8d99-edf195456eee"
-
-script: mocha --require ./test/setup.js --compilers jsx:babel-register -R list
+script: mocha --compilers jsx:babel-register -R list
 
 notifications:
  email: false
