--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ services:
 
 before_install:
   - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
-  - exportDISPLAY=:99.0
-  - sh-e/etc/init.d/xvfbstart
 
-script: mocha --compilers jsx:babel-register -R list
+script: mocha test/serverSpec.js
 
 notifications:
  email: false
