--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "superagent": "^2.3.0"
   },
   "devDependencies": {
