--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run lint && nodemon server/server.js",
     "test": "mocha --require ./test/setup.js --compilers jsx:babel-register",
-    "lint": "eslint --ext .js --ext .jsx test server db public --ignore-path client/public/bundle.js",
+    "lint": "eslint --ext .js --ext .jsx test server db client/components client/index.jsx --ignore-path client/public/bundle.js",
     "watch": "babel --watch ./public --out-dir ./public/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline && node server/server.js",
     "build": "npm run lint && node_modules/.bin/webpack"
   },
