--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-twitter": "^1.0.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-materialize": "^0.17.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "superagent": "^2.3.0"
