--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-twitter": "^1.0.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-materialize": "^0.17.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
