--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
     "dotenv": "^2.0.0",
     "draft-js": "^0.9.1",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
