--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": "https://github.com/enchanted-spotlight/Plato#readme",
   "dependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "draft-js": "^0.9.1",
