--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: node_js
+sudo: false
 node_js:
   - '4.5.0'
 
+addons:
+    apt:
+      sources:
+        - ubuntu-toolchain-r-test
+        packages:
+          - gcc-4.8
+          - g++-4.8
+
 services:
   - mongodb
+
+env:
+  - TRAVIS=travis CXX=g++-4.8
 
 before_install:
   - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
