--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,6 @@
 machine:
   node:
     version: 4.5.0
-  services:
-    - mongodb
+  dependencies:
+    pre:
+    - sudo service mongodb stop && curl -L -O https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1204-3.0.2.tgz && tar xvzf mongodb-linux-x86_64-ubuntu1204-3.0.2.tgz && sudo mv mongodb-linux-x86_64-ubuntu1204-3.0.2/bin/* /usr/bin/ && sudo service mongodb start
