--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "medium-draft": "^0.3.10",
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
     "passport": "^0.3.2",
