--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mocha": "^3.0.2",
     "mocha-jsdom": "^1.1.0",
     "react-addons-test-utils": "^15.3.2",
+    "sinon": "^1.17.6",
     "supertest": "^2.0.0",
     "webpack": "^1.13.2"
   }
