--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/enchanted-spotlight/Plato#readme",
   "dependencies": {
+    "@slack/client": "^3.6.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
