--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "sinon": "^1.17.6",
     "socket.io": "^1.5.0",
     "socket.io-client": "^1.5.0",
-    "superagent": "^2.3.0"
+    "superagent": "^2.3.0",
+    "throttle-debounce": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
