--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "superagent": "^2.3.0"
+    "superagent": "^2.3.0",
+    "throttle-debounce": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
