--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "superagent": "^2.3.0",
-    "throttle-debounce": "^1.0.1"
+    "throttle-debounce": "^1.0.1",
+    "sinon": "^1.17.6",
+    "socket.io": "^1.5.0",
+    "superagent": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
