--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux-thunk": "^2.1.0",
     "sinon": "^1.17.6",
     "socket.io": "^1.5.0",
+    "socket.io-client": "^1.5.0",
     "superagent": "^2.3.0"
   },
   "devDependencies": {
