--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "throttle-debounce": "^1.0.1",
     "sinon": "^1.17.6",
     "socket.io": "^1.5.0",
+    "socket.io-client": "^1.5.0",
     "superagent": "^2.3.0"
   },
   "devDependencies": {
