--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "cryptr": "^2.0.0",
     "dotenv": "^2.0.0",
     "draft-js": "^0.9.1",
     "express": "^4.14.0",
