--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "passport-twitter": "^1.0.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-infinite": "^0.10.0",
     "react-materialize": "^0.17.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "throttle-debounce": "^1.0.1",
     "sinon": "^1.17.6",
     "socket.io": "^1.5.0",
     "socket.io-client": "^1.5.0",
