--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "jquery": "^3.1.1",
     "medium-draft": "^0.3.10",
     "mongoose": "^4.6.1",
     "nodemailer": "^2.6.4",
