--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express-session": "^1.14.1",
     "jquery": "^3.1.1",
     "infinite-canvas": "^1.0.0",
+    "jquery": "^3.1.1",
     "medium-draft": "^0.3.10",
     "mongoose": "^4.6.1",
     "nodemailer": "^2.6.4",
