--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "infinite-canvas": "^1.0.0",
     "medium-draft": "^0.3.10",
     "mongoose": "^4.6.1",
     "nodemailer": "^2.6.4",
@@ -68,7 +69,6 @@
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^4.0.0",
     "redux-thunk": "^2.1.0",
-    "throttle-debounce": "^1.0.1",
     "sinon": "^1.17.6",
     "socket.io": "^1.5.0",
     "socket.io-client": "^1.5.0",
