--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "jquery": "^3.1.1",
+    "infinite-canvas": "^1.0.0",
     "medium-draft": "^0.3.10",
     "mongoose": "^4.6.1",
     "nodemailer": "^2.6.4",
