--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "sanitize-html": "^1.13.0",
     "sinon": "^1.17.6",
     "socket.io": "^1.5.0",
     "socket.io-client": "^1.5.0",
