--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "jquery": "^3.1.1",
+    "infinite-canvas": "^1.0.0",
+    "materialize": "^1.0.0",
     "medium-draft": "^0.3.10",
     "mongoose": "^4.6.1",
     "nodemailer": "^2.6.4",
@@ -76,8 +78,10 @@
     "react-dom": "^15.3.2",
     "react-infinite": "^0.10.0",
     "react-materialize": "^0.17.0",
+    "react-parallax": "^0.4.5",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-simple-parallax": "^0.2.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
     "redux-logger": "^2.6.1",
