--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "bugs": {
     "url": "https://github.com/enchanted-spotlight/Plato/issues"
   },
+  "engine": "node 6.5.0",
   "homepage": "https://github.com/enchanted-spotlight/Plato#readme",
   "dependencies": {
     "@slack/client": "^3.6.0",
