--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "socket.io": "^1.5.0",
     "socket.io-client": "^1.5.0",
     "superagent": "^2.3.0",
-    "throttle-debounce": "^1.0.1"
+    "throttle-debounce": "^1.0.1",
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -99,7 +100,6 @@
     "mocha-jsdom": "^1.1.0",
     "react-addons-test-utils": "^15.3.2",
     "sinon": "^1.17.6",
-    "supertest": "^2.0.0",
-    "webpack": "^1.13.2"
+    "supertest": "^2.0.0"
   }
 }
