--- a/package.json
+++ b/package.json
@@ -31,15 +31,26 @@
   "bugs": {
     "url": "https://github.com/enchanted-spotlight/Plato/issues"
   },
-  "engine": "node 6.5.0",
+  "engines": {
+    "node": "6.5.0",
+    "npm": ">3.0.0"
+  },
   "homepage": "https://github.com/enchanted-spotlight/Plato#readme",
   "dependencies": {
     "@slack/client": "^3.6.0",
     "axios": "^0.14.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.14.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
@@ -77,7 +88,8 @@
     "socket.io": "^1.5.0",
     "socket.io-client": "^1.5.0",
     "superagent": "^2.3.0",
-    "throttle-debounce": "^1.0.1"
+    "throttle-debounce": "^1.0.1",
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
