Update circ.yml to support autodeployment to heroku

--- a/circle.yml
+++ b/circle.yml
@@ -10,3 +10,8 @@ dependencies:
     - sudo apt-get install -y mongodb-org
     - sudo service mongod restart
     - npm install
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: plato notes
